[tool.poetry]
name = "myfakenewsdetector"
version = "0.1.0"
description = "Project to detect fake news"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
pandas = "~2.0"
numpy = "~1.25"
nltk = "^3.9.1"
gensim = "^4.3.3"
mlflow = "^2.16.2"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
